--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
