--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "babel-core": "^6.24.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongoose": "^4.9.2"
+    "mongoose": "^4.9.2",
+    "unirest": "^0.5.1"
   },
   "devDependencies": {
     "concurrently": "^3.4.0",
