added changes for backend, new dependencies for server

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.2",
+    "morgan": "^1.8.1",
     "unirest": "^0.5.1"
   },
   "devDependencies": {
