--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,17 @@
     "axios": "^0.16.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0",
-    "unirest": "^0.5.1"
+    "unirest": "^0.5.1",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
