fixed errors, removed security from pl route, fixed node vers, updated register form

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
