--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcrypt": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
+    "env": "0.0.2",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.2",
