--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
+    "react-masonry-component": "^5.0.5",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
