refactored code, updated reducer and actions ans login now working

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.2",
     "morgan": "^1.8.1",
+    "redux-promise": "^0.5.3",
     "unirest": "^0.5.1"
   },
   "devDependencies": {
