--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
-    "redux-thunk": "^2.2.0",
+    "redux-promise": "^0.5.3",
     "unirest": "^0.5.1",
     "validator": "^7.0.0"
   },
