--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
+
+
+
 language: node_js
 node_js: node
-services:
-- mongodb
+deploy:
+  provider: heroku
+  api_key:
+
+  app: pacific-sierra-89352
+
+  on:
+    repo: steviebuckets/podfeed
