--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "babel-node server.js",
     "client": "babel-node start-client.js",
     "dev": "echo \"This command has been deprecated. Use 'npm start'\" && exit 1",
+    "heroku-postbuild": "cd client/ && npm install --only=dev && npm install && npm run build",
     "lint": "eslint ."
   },
   "author": "",
